Fix image not overflowing in Firefox

--- a/src/components/styles/ProductOverview.css
+++ b/src/components/styles/ProductOverview.css
@@ -27,6 +27,10 @@
 }
 
 .main .images {
+    display: flex;
+    border: solid 1px black;
+    overflow: hidden;
+
     width: 90%;
     height: 100%;
 }
@@ -35,6 +39,7 @@
     object-fit: scale-down;
     width: 100%;
     height: 100%;
+    flex-shrink: 0;
 }
 
 .product-overview .main-content {
